# HostDetector

./: CMakeLists.txt  colorbutton.cpp  colorbutton.h  detectmanager.cpp  detectmanager.h  detectworker.cpp  detectworker.h  globalsetting.h  hoststatusitem.cpp  hoststatusitem.h  hoststatuswidget.cpp  hoststatuswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  operatewidget.cpp  operatewidget.h
src/: CMakeLists.txt  colorbutton.cpp  colorbutton.h  detectmanager.cpp  detectmanager.h  detectworker.cpp  detectworker.h  globalsetting.h  hoststatusitem.cpp  hoststatusitem.h  hoststatuswidget.cpp  hoststatuswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  operatewidget.cpp  operatewidget.h
translations/: get_qm_file.bat  get_ts_file.bat
translations/qm/: HostDetector_zh_CN.qm
translations/ts/: HostDetector_zh_CN.ts
